# splashtail

./: 404.html  Cargo.toml  Makefile  README.md  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: docs.yml
core/rust.binutils/: Cargo.toml
core/rust.bot_modules.acl/: Cargo.toml
core/rust.bot_modules.afk/: Cargo.toml
core/rust.bot_modules.auditlogs/: Cargo.toml
core/rust.bot_modules.captcha/: Cargo.toml
core/rust.bot_modules.core/: Cargo.toml
core/rust.bot_modules.gitlogs/: Cargo.toml
core/rust.bot_modules.hooks/: Cargo.toml
core/rust.bot_modules.inspector/: Cargo.toml
core/rust.bot_modules.limits/: Cargo.toml
core/rust.bot_modules.member_verify_autotriggers/: Cargo.toml
core/rust.bot_modules.moderation/: Cargo.toml
core/rust.bot_modules.punishment_autotriggers/: Cargo.toml
core/rust.bot_modules.root/: Cargo.toml
core/rust.bot_modules.server_backups/: Cargo.toml
core/rust.bot_modules.server_member_backups/: Cargo.toml
core/rust.bot_modules.settings/: Cargo.toml
core/rust.bot_modules.tags/: Cargo.toml
core/rust.bot_modules.templating/: Cargo.toml
core/rust.bot_modules.temporary_punishments/: Cargo.toml
core/rust.bot_modules_default/: Cargo.toml
core/rust.gwevent/: Cargo.toml
core/rust.lockdowns/: Cargo.toml
core/rust.module_settings.poise/: Cargo.toml
core/rust.modules_ext/: Cargo.toml
core/rust.rpc_server.bot/: Cargo.toml
core/rust.rpc_server.bot/src/: lib.rs  settings_execute.rs  templating_exec.rs  types.rs
data/: seed.iblcli-seed
docs/: .gitignore  book.toml
(+180 files in other folders)
