[package]
name = "rust_rpc_server_bot"
version = "6.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
bitflags = "2"
axum = { version = "0.7.5", features = ["macros"] }
moka = { version = "0.12", features = ["future", "futures-util"] }
typetag = "0.2"

# Anti-Raid specific
splashcore_rs = { path = "../../core/rust.std" }
module_settings = { path = "../../core/rust.module_settings" }
sandwich_driver = { path = "../../core/rust.sandwich_driver" }
silverpelt = { path = "../../core/rust.silverpelt" }
permission_checks = { path = "../../core/rust.permissions.checks" }
permissions = { path = "../../core/rust.permissions" }
rust_rpc_server = { path = "../../core/rust.rpc_server" }
templating = { path = "../../core/rust.templating" }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.botox]
git = "https://github.com/Anti-Raid/botox"
branch = "main"

[dependencies.kittycat]
git = "https://github.com/infinitybotlist/kittycat"
branch = "main"

